--- a/_posts/2018-06-19-Amygdala!.md
+++ b/_posts/2018-06-19-Amygdala!.md
@@ -21,7 +21,77 @@ We work through each layer of our network calculating the outputs for each neuro
 
 The weights act as bridges. We use the weights to propagate signals forward from the input to the output layers in a neural network. We use the weights to also propagate error backwards from the output back into the network to update our weights. This is called *back propagation*.
 
-## 
+##### RNN for regression 
+
+In a mini-batch, each sample has one state (scalar or tuple for LSTM cell). There are `batch_size` parallel states in a layer. When a RNN is not *stateful*, the state is reset after every sample. They don't work by batches, the idea in a batch is that every sample is independent from each other.
+
+- `stateful=False`. Under such setting, all the states are resetted after each batch. After processed some batches:
+  - A state is: Where am I now inside a sequence? Which time step is it? How is this particular sequence behaving since its beginning up to now?
+  - A weight is: What do I know about the general behavior of all sequences I've seen so far?
+
+- `statefun=True`. In this case, there is also the same number of parallel states, but they will simply not be resetted at all. The next batch with `batch_size` sequences (it's required to remain the same) will reuse the same `batch_size` states that were created before. After feeding many batches in an epoch, the actual meaning is
+  - `batch_size` individual sequences, each with length `time_steps * num_batches`
+  - When you see that you reached the total length of the sequences, then you call `model.reset_states()`, meaning you will not continue the previous sequences anymore, now you will start feeding new sequences.
+
+#### TensorFlow best practices
+
+## Naming the ops
+The way to understand statements like `a = tf.op(..., name='operation_name')` is to break it down to two components. 
+- First, calling `tf.op(..., name='operation_name')` would indeed lead to the construction of a new operation. The operation is also added to the computational graph. 
+- Second, though this looks like a constructor, it is just a function call with side-effect, and the return value of this function is a tensor. Most TensorFlow functions return `tf.Tensors`. Some TF functions return `tf.Operations` instead of `tf.Tensors`: `init = tf.global_variables_initializer()` and `train = optimizer.minimize(loss)` are ops. The result of calling run on an Operation is None. You run an operation to cause a side-effect, not to retrieve a value. 
+
+Thus, to get the output of an operation, you will have to pass the output tensor to `session.run`, not the operator itself. For instance, use `session.run(op.outputs, feed_dict=...)`.
+
+Usually there will be a `name` parameter when you call the creater of ops. We recommend naming operations that you may need later, so when the graph is restored, you can retrieve these operations by their names, using `graph.get_operation_by_name(name)`. This name is independent of the names the objects are assigned to in Python. Tensors are named after the operation that produces them followed by an output index, as in "add:0" above.
+
+If the tensor is returned from a library call, then you do not get to name the last operation. A hack you can do is to add the tensor to your computation graph's collection. You can put any intermediate operation or tensor into the default graph's collection, via 
+{% highlight python %}
+tf.add_to_collection("tensor_collection_key", tensor)
+{% endhighlight %}
+later use
+{% highlight python %}
+tensor = tf.get_collection("tensor_collection_key")[i]
+# i is the index remembered
+# or graph.get_collection("collection_name")
+{% endhighlight %}
+to restore the tensor.
+
+But each collection is a list. You will need to either store each value under a unique key, or remember the order values are added to the collection to retrieve them properly. It is far more error-prone than just use unique operation names.
+
+A better way compared to above is to wrap an `identity` operation around the library call, and name the identity operation properly. The code looks like this
+{% highlight python %}
+# normally you'd just use r = some_library_call(args), if you don't care about r in restored graph.
+r = tf.identity(some_library_call(args), name="unique_op_name")
+{% endhighlight %}
+Now you can easily get the operation or tensor from the graph.
+
+## Feed with TensorFlow Dataset framework
+
+The traditional `feed_dict` and `placeholder` feeding method is *inefficient* and will slow down the training for large, realistic datasets. By using the new `Dataset` API to build high performance data pipelines, all of the operations to load, transform and feed into the model are automatically optimized and paralleled to provide efficient consumption of data.
+
+- Placing input pipeline operations on the CPU can significantly improve performance. Utilizing the CPU for the input pipeline frees the GPU to focus on training.
+{% highlight python %}
+with tf.device('/cpu:0'):
+  distorted_inputs = load_and_process()
+{% endhighlight %}
+
+
+- Using tf.data API
+The tf.data API utilizes C++ multi-threading and has a much lower overhead than the Python-based queue_runner that is limited by Python's multi-threading performance. Avoid using feed_dict with large inputs.
+
+1. create the dataset
+2. shuffle (with a big enough buffer size)
+3. repeat
+4. map with parser (preprocessing, augmentation...) using multiple threads
+5. batch & prefetch
+{%highlight python %}
+dataset = dataset.batch(64)
+dataset = dataset.prefetch(1)
+{% endhighlight %}
+
+
+- Fused batch norm
+Fused batch norm combines the multiple operations needed to do batch normalization into a single kernel. Batch norm is an expensive process that for some models makes up a large percentage of the operation time. Using fused batch norm can result in a 12%-30% speedup.
 
 Deep learning supplies a way to map the raw data space to another feature space in a highly non-linear manner. The correlation which doesn't show up in the original space may appear in the casted image.
 
@@ -36,6 +106,56 @@ This is a
 piece of code 
 in a block
 ~~~~
+
+{% highlight ruby %}
+#!/usr/bin/env/python
+# coding=utf-8
+import tensorflow as tf
+import numpy as np
+
+input_ids = tf.placeholder(dtype=tf.int32, shape=[None])
+
+embedding = tf.Variable(np.identity(5, dtype=np.int32))
+input_embedding = tf.nn.embedding_lookup(embedding, input_ids)
+
+sess = tf.InteractiveSession()
+sess.run(tf.global_variables_initializer())
+print(embedding.eval())
+print(sess.run(input_embedding, feed_dict={input_ids:[1, 2, 3, 0, 3, 2, 1]}))
+{% endhighlight %}
+
+The known variable `embedding` is a $$5 \times 5$$ diagnal matrix, the placeholder `input_ids` stores the indexes. Above code snippet gives:
+
+~~~
+embedding = [[1 0 0 0 0]
+             [0 1 0 0 0]
+             [0 0 1 0 0]
+             [0 0 0 1 0]
+             [0 0 0 0 1]]
+input_embedding = [[0 1 0 0 0]
+                   [0 0 1 0 0]
+                   [0 0 0 1 0]
+                   [1 0 0 0 0]
+                   [0 0 0 1 0]
+                   [0 0 1 0 0]
+                   [0 1 0 0 0]]
+~~~
+
+
+{% highlight ruby %}
+input_embedding = tf.nn.embedding_lookup(embedding, input_ids)
+print(sess.run(input_embedding, feed_dict={input_ids:[[1, 2], [2, 1], [3, 3]]}))
+{% endhighlight %}
+
+~~~
+[[[0 1 0 0 0]
+  [0 0 1 0 0]]
+ [[0 0 1 0 0]
+  [0 1 0 0 0]]
+ [[0 0 0 1 0]
+  [0 0 0 1 0]]]
+~~~
+
 
 {% highlight ruby %}
 def print_hi(name)
