--- a/_posts/2018-06-19-Amygdala!.md
+++ b/_posts/2018-06-19-Amygdala!.md
@@ -5,23 +5,26 @@ date:   2018-06-19 22:19:42 +0800
 categories: jekyll update
 math: true
 ---
+
+<!--more-->
+
 #### Difference between static_rnn and dynamic_rnn
 
 `tensorflow.static_rnn` gives the graph of unrolled RNN, w.r.t. the time dimension. Tensorboard will show a stacked architecture with `sequence_length` of `rnn_cell`s. Thus during the feed phase, every batch is required to have the same `sequence_length`, a.k.a. `time_steps`.
 
-`tensorflow.dynamic_rnn` does not unroll RNN. It uses `tf.while_loop` and other control flow ops to generate a graph to execute the loop. For the dynamic version, `sequence_length` means loop numbers and batches can have variable `sequence_length`. 
+`tensorflow.dynamic_rnn` does not unroll RNN. It uses `tf.while_loop` and other control flow ops to generate a graph to execute the loop. For the dynamic version, `sequence_length` means loop numbers and batches can have variable `sequence_length`.
 
 #### NN for regression
 
 When applied to regression problem, the NN's output layer has only one node, the output of the node is the same as the input of the node. That is, linear activation function: \\(f(x) = x\\).
 
-A function that takes the input signal and generates an output signal, but takes into account the threshold, is called an *activation function*. 
+A function that takes the input signal and generates an output signal, but takes into account the threshold, is called an *activation function*.
 
 We work through each layer of our network calculating the outputs for each neuron. All of the outputs from one layer become inputs to the neurons on the next layer. This process is called *forward propagation*.
 
 The weights act as bridges. We use the weights to propagate signals forward from the input to the output layers in a neural network. We use the weights to also propagate error backwards from the output back into the network to update our weights. This is called *back propagation*.
 
-##### RNN for regression 
+##### RNN for regression
 
 In a mini-batch, each sample has one state (scalar or tuple for LSTM cell). There are `batch_size` parallel states in a layer. When a RNN is not *stateful*, the state is reset after every sample. They don't work by batches, the idea in a batch is that every sample is independent from each other.
 
@@ -36,15 +39,15 @@ In a mini-batch, each sample has one state (scalar or tuple for LSTM cell). Ther
 #### TensorFlow best practices
 
 ## Naming the ops
-The way to understand statements like `a = tf.op(..., name='operation_name')` is to break it down to two components. 
-- First, calling `tf.op(..., name='operation_name')` would indeed lead to the construction of a new operation. The operation is also added to the computational graph. 
-- Second, though this looks like a constructor, it is just a function call with side-effect, and the return value of this function is a tensor. Most TensorFlow functions return `tf.Tensors`. Some TF functions return `tf.Operations` instead of `tf.Tensors`: `init = tf.global_variables_initializer()` and `train = optimizer.minimize(loss)` are ops. The result of calling run on an Operation is None. You run an operation to cause a side-effect, not to retrieve a value. 
+The way to understand statements like `a = tf.op(..., name='operation_name')` is to break it down to two components.
+- First, calling `tf.op(..., name='operation_name')` would indeed lead to the construction of a new operation. The operation is also added to the computational graph.
+- Second, though this looks like a constructor, it is just a function call with side-effect, and the return value of this function is a tensor. Most TensorFlow functions return `tf.Tensors`. Some TF functions return `tf.Operations` instead of `tf.Tensors`: `init = tf.global_variables_initializer()` and `train = optimizer.minimize(loss)` are ops. The result of calling run on an Operation is None. You run an operation to cause a side-effect, not to retrieve a value.
 
 Thus, to get the output of an operation, you will have to pass the output tensor to `session.run`, not the operator itself. For instance, use `session.run(op.outputs, feed_dict=...)`.
 
 Usually there will be a `name` parameter when you call the creater of ops. We recommend naming operations that you may need later, so when the graph is restored, you can retrieve these operations by their names, using `graph.get_operation_by_name(name)`. This name is independent of the names the objects are assigned to in Python. Tensors are named after the operation that produces them followed by an output index, as in "add:0" above.
 
-If the tensor is returned from a library call, then you do not get to name the last operation. A hack you can do is to add the tensor to your computation graph's collection. You can put any intermediate operation or tensor into the default graph's collection, via 
+If the tensor is returned from a library call, then you do not get to name the last operation. A hack you can do is to add the tensor to your computation graph's collection. You can put any intermediate operation or tensor into the default graph's collection, via
 {% highlight python %}
 tf.add_to_collection("tensor_collection_key", tensor)
 {% endhighlight %}
@@ -102,8 +105,8 @@ E.g. statistical arbitrage opportunity may exsist in price curves, profit curves
 Jekyll also offers powerful support for code snippets:
 
 ~~~~
-This is a 
-piece of code 
+This is a
+piece of code
 in a block
 ~~~~
 
@@ -229,9 +232,9 @@ $\bigl( \begin{smallmatrix} a & b \\ c & d \end{smallmatrix} \bigr)$
 $$
 \begin{align}
 \sqrt{37} & = \sqrt{\frac{73^2-1}{12^2}} \\
- & = \sqrt{\frac{73^2}{12^2}\cdot\frac{73^2-1}{73^2}} \\ 
+ & = \sqrt{\frac{73^2}{12^2}\cdot\frac{73^2-1}{73^2}} \\
  & = \sqrt{\frac{73^2}{12^2}}\sqrt{\frac{73^2-1}{73^2}} \\
- & = \frac{73}{12}\sqrt{1 - \frac{1}{73^2}} \\ 
+ & = \frac{73}{12}\sqrt{1 - \frac{1}{73^2}} \\
  & \approx \frac{73}{12}\left(1 - \frac{1}{2\cdot73^2}\right)
 \end{align}
 $$
@@ -245,7 +248,7 @@ n/2,  & \text{if $n$ is even} \\
 $$
 
 {% raw %}
-$$a^2 + b^2 = c^2$$ --> note that all equations between these tags will not need escaping! 
+$$a^2 + b^2 = c^2$$ --> note that all equations between these tags will not need escaping!
 {% endraw %}
 
 $$
