--- a/_posts/2018-06-19-Amygdala!.md
+++ b/_posts/2018-06-19-Amygdala!.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Amygdala!"
 date:   2018-06-19 22:19:42 +0800
-categories: jekyll update
+categories: junk
 math: true
 ---
 
